made a browse page in the server.js file

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,7 +3,7 @@
         <p><%=msg%></p>
     </div>
 <%}%>
-
+<p>Guest Username: w@w and password:123</p>
 <form action="/users/login" method="POST">
 <label for="email">Email:</label>
 <input id="email" type="email" name="email" placeholder="Enter your email" required/>
