--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,3 +1,6 @@
-<h2>User Profile</h2>
+<a href="/users/logout">Log Out</a>
+<h2>Profile Page!   </h2>
 
-<h3>Thanks for being a user, <%=user.email%>!</h3>
+
+
+<h3>Welcome to AniSearch <%=user.email%>!</h3>
