--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,21 @@
-<h2>This is the home page of the site!</h2>
+<h2>This is where you can go on an adventure and search up your favorite anime!</h2>
+<p>Make sure you login or sign up before browsing!</p>
+
+
+
+
+
+
+
+<!-- <form action="/users/login" method="POST">
+<label for="email">Email:</label>
+<input id="email" type="email" name="email" placeholder="Enter your email" required/>
+
+<label for="password">Password:</label>
+<input id="password" type="password" name="password" placeholder="Enter your password" required/>
+
+<button type="submit">Login!</button>
+</form> -->
+<a href="/users/login">Log in</a>
+<a href="/users/new">Sign up</a>
+
