--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,38 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Intro to Authentication</title>
+ <header>
+Welcome to AniSearch!
+ </header>
 </head>
 <body>
-  <nav>
-    <ul>
-      <% if (user) {%>
-        <!-- if the user is logged in -->
-        <li>
-          <a href="/users/profile">Profile</a>
-        </li>
-        <li>
-          <a href="/users/logout">LogOut</a>
-        </li>
-     <% } else {%>
-      <!-- if the user is not logged in -->
-      <li>
-        <a href="/users/new">Sign up</a>
-      </li>
-      <li>
-        <a href="/users/login">Login</a>
-      </li>
-     <% }%>
-
-
-    </ul>
-  </nav>
+  
 
   <main>
-    <h1>Intro to Authentication</h1>
     <%- body %> 
-
   </main>
-
 
   
 </body>
