--- a/views/browse.ejs
+++ b/views/browse.ejs
@@ -1,6 +1,6 @@
-<form class="container" method="GET" action="/results">
+<form class="container" method="GET" action="/anime">
     <p>Search for your favorite Anime below!</p>
     <label for="search">Search:</label>
-    <input id="search" type="text" name="userInput"/>
+    <input id="search" type="text" name="animeSearch"/>
     <input type="submit"/>
 </form>
