fixed some debugged issues with the signup page, and created a controller for anime

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,5 +17,5 @@
 <button type="submit">Login!</button>
 </form> -->
 <a href="/users/login">Log in</a>
-<a href="/users/new">Sign up</a>
+<a href="/users/signup">Sign up</a>
 
