--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -4,7 +4,7 @@
     </div>
 <%}%>
 
-<form action="/users/" method="POST">
+<form action="/users/signup" method="POST">
 <label for="email">Email:</label>
 <input id="email" type="email" name="email" placeholder="Enter your email" required/>
 
