--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,7 +1,13 @@
 <a href="/users/logout">Log Out</a>
-<a href="/browse">Browse</a>
+<a href="/search">Search</a>
 <h2>Profile Page!   </h2>
 
 
 
 <h3>Welcome to AniSearch <%=user.email%>!</h3>
+
+<% saveAnime.forEach(anime => {%>
+    
+    <a href='/anime/<%=anime.animeId%>'>fave anime</a>
+
+<%})%>
