finally showed the title of the anime on profile page, and debugged stuff

--- a/views/browse.ejs
+++ b/views/browse.ejs
@@ -1,3 +1,4 @@
+<a href="/users/logoff">Log Off</a> <a href="/users/profile">Profile</a>
 <form class="container" method="GET" action="/anime">
     <p>Search for your favorite Anime below!</p>
     <label for="search">Search:</label>
