--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,8 +1,9 @@
 <a href='/search'>Search</a> <a href="/users/profile">Profile</a>
 
 <% const {title,episodes,rating, synopsis, images, status, duration, background, mal_id } = anime %> 
+
+
 <h1><%= title %></h1>
-<p><%=mal_id %></p>
 <img src="<%=images.jpg.large_image_url%>"/>
 <p><b>Episode: </b><%=episodes%></p>
 <p><b>Duration: </b> <%=duration %></p>
@@ -14,8 +15,14 @@
 <form method="POST" action="/users/profile">
     <input hidden value="<%=title%>" name="title"/>
     <input hidden value="<%=mal_id%>" name="mal_id"/>
-    
     <button type="submit">Save this anime</button>
+    
+    
+    <form >
+        <label for="create">Create comment</label>
+        <input type="text" name="content" id="create"/>
+        <button type="submit">submit</button>
+    </form>
 
 </form>
 
