--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -5,9 +5,17 @@
 
 
 <h3>Welcome to AniSearch <%=user.email%>!</h3>
-
+<h3>Links:</h3>
 <% saveAnime.forEach(anime => {%>
-    
-    <a href='/anime/<%=anime.animeId%>'>fave anime</a>
+<ul>
+   <li>
+       <a href='/anime/<%=anime.animeId%>'><%=anime.title%></a>
+       <form method="POST" action="/users/profile/?_method=DELETE">
+           <input hidden value="<%=anime.id%>" name="id"/>
+           <button type="submit">Delete</button>
+       </form>
+   </li> 
 
+</ul>    
 <%})%>
+
