made my database comment to work

--- a/views/browse.ejs
+++ b/views/browse.ejs
@@ -1,7 +1,9 @@
-<a href="/users/logoff">Log Off</a> <a href="/users/profile">Profile</a>
+<a href="/users/logout">Log Out</a> <a href="/users/profile">Profile</a>
 <form class="container" method="GET" action="/anime">
     <p>Search for your favorite Anime below!</p>
     <label for="search">Search:</label>
     <input id="search" type="text" name="animeSearch"/>
     <input type="submit"/>
 </form>
+
+
