finished edit thingy

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -18,12 +18,8 @@
     <button type="submit">Save this anime</button>
 </form>
     
-    
-    <!-- <form method="POST" action="/anime/:id/?_method=PUT">
-        <label for="create">Create comment</label>
-        <input type="text" name="comment" id="create"/>
-        <button type="submit">submit</button>
-    </form> -->
+
+   
     
   <h2>Comments:</h2>
 
@@ -32,12 +28,23 @@
     <p><b><%=comment.user.email%></b></p>
     <form method="POST" action="/anime/<%=mal_id%>/?_method=DELETE">
         <input hidden value="<%=anime.id%>" name="id"/>
-        <button type="submit">Delete</button>
+       <%if (comment.dataValues.user.id === user.id){%>
+         <button type="submit">Delete</button>
+    <%}%>
     </form>
-  <%})%>
-    
 
-
+    <form method="GET" action="/anime/edit/<%=mal_id%>">
+        <input hidden type="number" value="<%= comment.id%>" name="id"/>
+        <input hidden type="number" value="<%= anime.id %>" name="animeId"/>
+        <% if (comment.dataValues.user.id === user.id) {%>
+            <button type="submit">edit</button>
+  
+        <%}%>
+    </form>
+  
+        
+ <%})%>
+  
     <form method="POST" action="/anime/<%=mal_id%>">
             <label for="create">Create comment</label>
             <textarea type="text" row="5" column="10" name="comment" id="create"></textarea>
