renamed my repository

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -15,7 +15,7 @@
 <form method="POST" action="/users/profile/?_method=PUT">
     <input hidden value="<%=title%>" name="title"/>
     <input hidden value="<%=mal_id%>" name="mal_id"/>
-    <button type="submit">Save this anime</button>
+    <button type="submit">Save Anime!</button>
 </form>
     
 
