--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="../css/style.css"/>
 <h1>edit process</h1>
 <form method="POST" action="/anime/edit/?_method=PUT">
     <input  type="text" name="comment"/>
