--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="../css/style.css"/>
 <a href="/users/logout">Log Out</a>
 <a href="/search">Search</a>
 <h2>Profile Page!   </h2>
