did css for my login page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,17 @@
 <h2>This is where you can go on an adventure and search up your favorite anime!</h2>
-<p>Make sure you login or sign up before browsing!</p>
+<div class="justify-content-center form control">
+    <div class="d-flex flex-column w-25 justify-content-center form control">
+        <p>Make sure you login or sign up before browsing!</p>
 
+    </div>
+
+    <div class="d-flex flex-column w-25 form-control text-center">
+        <a href="/users/login">Log in</a>
+        <a href="/users/signup">Sign up</a>
+
+    </div>
+
+</div>
 
 
 
@@ -16,6 +27,4 @@
 
 <button type="submit">Login!</button>
 </form> -->
-<a href="/users/login">Log in</a>
-<a href="/users/signup">Sign up</a>
 
