finished the signup page bootstrap

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,26 @@
-<h2>This is where you can go on an adventure and search up your favorite anime!</h2>
-<div class="justify-content-center form control">
-    <div class="d-flex flex-column w-25 justify-content-center form control">
-        <p>Make sure you login or sign up before browsing!</p>
+<div class="container myFlexZone d-flex flex-column justify-content-center align-items-center">
 
-    </div>
+    
+    <h2>This is where you can go on an adventure and search up your favorite anime!</h2>
+    <div class="d-flex flex-column w-25 form-control">
+        
+        
+        
+        
+        
+        <div class="mb-3 form-floating text-center bg-pink ">
+            <p>Make sure you login or sign up before browsing!</p>
+            <a href="/users/login">Log in</a>
+            
+            <a href="/users/signup">Sign up</a>
+        </div>
 
-    <div class="d-flex flex-column w-25 form-control text-center">
-        <a href="/users/login">Log in</a>
-        <a href="/users/signup">Sign up</a>
-
-    </div>
-
+        </div>
+    
+    
 </div>
+
+
 
 
 
