--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,25 +1,28 @@
-<div class="container myFlexZone d-flex flex-column justify-content-center align-items-center">
+<div id="homePage">
 
-    
-    <h2>This is where you can go on an adventure and search up your favorite anime!</h2>
-    <div class="d-flex flex-column w-25 form-control">
+    <div class="container myFlexZone d-flex flex-column justify-content-center align-items-center">
+        
+        
+        <h2 class="indexH2"><b>Go on an adventure and search up your favorite anime ^_^!</b></h2>
         
         
         
         
-        
-        <div class="mb-3 form-floating text-center bg-pink ">
-            <p>Make sure you login or sign up before browsing!</p>
-            <a href="/users/login">Log in</a>
+        <div class="d-flex flex-column w-25 form-control myColor ">
             
-            <a href="/users/signup">Sign up</a>
+            <div class="mb-3 form-floating text-center">
+                <p>Make sure you login or sign up before searching!</p>
+                <a href="/users/login">Log in</a>
+                
+                <a href="/users/signup">Sign up</a>
+            </div>
+            
         </div>
-
-        </div>
-    
+        
+        
+    </div>
     
 </div>
-
 
 
 
