--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,14 +1,16 @@
 <link rel="stylesheet" href="../css/style.css"/>
-<div class="container myFlexZone d-flex flex-column justify-content-center align-items-center">
+<div id="loginBody">
 
-    <% if (msg) {%>
-        <div>
-            <p><%=msg%></p>
-        </div>
-        <%}%>
+    <div class="container myFlexZone d-flex flex-column justify-content-center align-items-center">
         
-        
-        
+        <% if (msg) {%>
+            <div>
+                <p><%=msg%></p>
+            </div>
+            <%}%>
+            
+            
+            
         <p>Guest Username: w@w and password:123</p>
         
         <form action="/users/login" method="POST" class="d-flex flex-column w-25 form-control">
@@ -33,8 +35,9 @@
         
         
     </div>
-
-
-
-
-
+    
+    
+    
+    
+</div>
+    
