added text animation to home screen

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
     <div class="container myFlexZone d-flex flex-column justify-content-center align-items-center">
         
         
-        <h2 class="indexH2"><b>Go on an adventure and search up your favorite anime ^_^!</b></h2>
+        <h2 class="indexH2" data-text="Welcome^_^!">Welcome^_^!</h2>
         
         
         
