--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,9 +2,11 @@
     height: 80vh;
 }
 
+/* background Images*/
+
 #loginBody {
-    background-image: url();
-    height: 100vh;
+    background-image: url('https://wallpaperaccess.com/full/5289737.jpg');
+    height: 110vh;
     /* background-repeat: no-repeat; */
     background-size: cover;
 }
@@ -21,7 +23,52 @@
       height: 100vh;
   }
 
-  .indexH2{
-      color: hotpink;
+  #profilePage {
+      background-image: url('https://w7.pngwing.com/pngs/643/644/png-transparent-myanimelist-mangaka-anime-manga-human-fictional-character.png');
+      height: 100vh;
+      background-size: cover;
+      /* width: 150vh; */
+      /* background-repeat: no-repeat; */
   }
+
+  .indexH2{
+      /* color: hotpink; */
+      position:relative;
+      -webkit-text-stroke: 0.3vw #383d52;
+      text-transform: uppercase;
+  }
+
+  .indexH2::before {
+      content: attr(data-text);
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 0%;
+      height: 100%;
+      color: hotpink;
+      -webkit-text-stroke: 0vw #383d52;
+      border-right: 2px solid hotpink;
+      overflow: hidden;
+      animation: animate 6s linear infinite;
+  }
+  @keyframes animate {
+      0%, 10%, 100%
+      {
+        width: 0;  
+      }
+      70%, 100%
+      {
+        width: 100%;
+      }
+  }
+
+
+  .pLoginClass {
+      color: lightskyblue;
+  }
+
+  .msgClass {
+      color: red;
+  }
+
   
