--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,29 +1,35 @@
 <link rel="stylesheet" href="../css/style.css"/>
-<div class="container myFlexZone d-flex flex-column justify-content-center align-items-center">
+<div id="signUpBackground">
 
     
-    <% if (msg) {%>
-        <div>
-            <p><%=msg%></p>
-        </div>
-        <%}%>
+    
+    <div class="container myFlexZone d-flex flex-column justify-content-center align-items-center">
         
-        <h3>ITS TIME TO SIGN UP</h3>
-        <form action="/users/signup" method="POST" class="d-flex flex-column w-25 form-control">
-            <div class="form-floating mb-3">
-                <input id="email" type="email" name="email" class="form-control" placeholder="Enter your email" required/>
-                <label for="email">Email:</label>
+        
+        <% if (msg) {%>
+            <div>
+                <p><%=msg%></p>
             </div>
-                
-            <div class="mb-3 form-floating">
-                <input id="password" type="password" name="password" class="form-control" placeholder="Enter your password" required/>
-                <label for="password">Password:</label>
-            </div>
-                
-
-            <button type="submit" class="btn btn-primary">Sign up!</button>
+            <%}%>
             
-        </form>
-
-
+            <h3 class="animateSignUp" data-text="Sign Up"><b>Sign Up</b></h3>
+            <form action="/users/signup" method="POST" class="d-flex flex-column w-25 form-control">
+                <div class="form-floating mb-3">
+                    <input id="email" type="email" name="email" class="form-control" placeholder="Enter your email" required/>
+                    <label for="email">Email:</label>
+                </div>
+                
+                <div class="mb-3 form-floating">
+                    <input id="password" type="password" name="password" class="form-control" placeholder="Enter your password" required/>
+                    <label for="password">Password:</label>
+                </div>
+                
+                
+                <button type="submit" class="btn btn-primary"><b>Sign up!</b></button>
+                
+            </form>
+            
+            
+        </div>
+        
     </div>
