--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,6 +1,13 @@
 <link rel="stylesheet" href="../css/style.css"/>
-<a href="/users/logout">Log Out</a>
-<a href="/search">Search</a>
+<nav class="nav navbar-expand-lg bg-light d-flex justify-content-right">
+    
+    <div class="container-fluid form-control">
+        
+        <a class="navbar-brand" href="/users/logout">Log Out</a>
+        <a class="navbar-brand" href="/search">Search</a>
+    
+    </div>
+</nav>
 
 <div id="profilePage">
 
