--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -8,7 +8,7 @@
         
         <% if (msg) {%>
             <div>
-                <p><%=msg%></p>
+                <p class="msgClass"><b><%=msg%></b></p>
             </div>
             <%}%>
             
