align my search page to the center

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,6 +41,9 @@
       background-image: url('https://thoughtcatalog.com/wp-content/uploads/2021/06/Anime-Pick-Up-Lines.jpeg');
       height: 100vh;
   }
+  /* .mySearch{
+      height: 80vh;
+  } */
 
   .indexH2{
       /* color: hotpink; */
