--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -9,6 +9,8 @@
     </div>
 </nav>
 
+<!-- the page where you edit the comment and update it -->
+
 <h1>edit process</h1>
 <form method="POST" action="/anime/edit/?_method=PUT">
     <input type="text" name="comment"/>
