--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,5 +1,5 @@
-<nav class="nav navbar-expand-lg bg-light d-flex justify-content-right">
-    <div class="container-fluid form-control">
+<nav class="nav navbar-expand-lg bg-light d-flex flex-row-reverse">
+    <div class="container-fluid form-control d-flex flex-wrap">
         
         <a class="navbar-brand" href="/users/profile">Profile</a>
         <a class="navbar-brand" href="/search">Search</a>
