--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="../css/style.css"/>
-<nav class="nav navbar-expand-lg bg-light d-flex justify-content-right">
+<nav class="nav navbar-expand-lg  d-flex flex-row-reverse">
     
     <div class="container-fluid form-control">
         
-        <a class="navbar-brand" href="/users/logout">Log Out</a>
-        <a class="navbar-brand" href="/search">Search</a>
+        <a class="navbar-brand p-2" href="/users/logout">Log Out</a>
+        <a class="navbar-brand p-2" href="/search">Search</a>
     
     </div>
 </nav>
